test/fail/migration-more.mo
actor (with migration = func(n:Nat) : Int {n}) // reject - expect function on records
{

};
